<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_group_user">
        <item
            android:id="@+id/nav_id_map"
            android:icon="@drawable/ic_map_black_48dp"
            android:title="@string/nav_map"/>
        <item
            android:id="@+id/nav_id_tag"
            android:icon="@drawable/pound_box"
            android:title="@string/nav_str_tag"/>
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_group_settings">

        <item
            android:id="@+id/nav_id_profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_id_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/nav_settings"/>
    </group>


</menu>