<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_add_username"
        android:id="@+id/main_username_et"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_add_name"
        android:id="@+id/main_name_et"
        android:inputType="text"
        android:layout_below="@+id/main_username_et"
        android:layout_alignLeft="@+id/main_username_et"
        android:layout_alignStart="@+id/main_username_et" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_add_moto"
        android:id="@+id/main_moto_et"
        android:inputType="text"
        android:layout_below="@+id/main_name_et"
        android:layout_alignLeft="@+id/main_username_et"
        android:layout_alignStart="@+id/main_username_et"
        android:layout_marginTop="10dp" />

</RelativeLayout>