<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/node_staticIP"
        android:id="@+id/static_et"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:inputType="number|phone|numberSigned|numberDecimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_latitude"
        android:id="@+id/lat_et"
        android:inputType="number|phone|numberSigned|numberDecimal"
        android:layout_below="@+id/static_et"
        android:layout_alignLeft="@+id/static_et"
        android:layout_alignStart="@+id/static_et"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_longitude"
        android:id="@+id/long_et"
        android:inputType="number|phone|numberSigned|numberDecimal"
        android:layout_below="@+id/lat_et"
        android:layout_alignLeft="@+id/lat_et"
        android:layout_alignStart="@+id/lat_et"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

</RelativeLayout>